@@ -1,3 +1,7 @@
+2009-02-25  higepon  <higepon@users.sourceforge.jp>
+
+        * test/input-output-port.scm : Added.
+
 2009-02-24  higepon  <higepon@users.sourceforge.jp>
 
         * BufferedFileBinaryInputOutputPort.cpp (BufferedFileBinaryInputOutputPort::fillBuffer): Added some implementations.
